// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component should apply values from theme 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "height": 0.5,
    }
  }
  updateTheme={[Function]}
/>
`;

exports[`Divider Component should pass view properties 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
    }
  }
  testID="testing"
/>
`;

exports[`Divider Component should render with style 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "blue",
      "height": 0.5,
    }
  }
/>
`;

exports[`Divider Component should render without issues 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
    }
  }
/>
`;
